solve a bit of awkard spacing issue

--- a/src/forecast.css
+++ b/src/forecast.css
@@ -1,6 +1,6 @@
 #forecast {
   /*hide for development*/
-  display: block;
+  display: none;
 }
 
 #forecast-content {
