--- a/src/hourly.css
+++ b/src/hourly.css
@@ -1,3 +1,6 @@
+#hourly {
+  display: none;
+}
 #hourly-content {
   margin-top: 1.5rem;
   display: flex;
