--- a/src/localInfo.css
+++ b/src/localInfo.css
@@ -1,5 +1,4 @@
 #locale {
-  /*hide while in development*/
   display: block;
   text-align: end;
   color: var(--primary);
@@ -13,12 +12,13 @@
 
     > div {
       > * {
-        margin-right: 1rem;
+        margin-right: 2rem;
       }
       > h2 {
         font-size: 2.5rem;
         font-weight: 600;
         line-height: 140%;
+        margin-top: 1rem;
       }
       > h3 {
         font-size: 1.25rem;
