--- a/src/section-container.css
+++ b/src/section-container.css
@@ -1,7 +1,7 @@
 .section-container {
   width: min(360px, 100vw);
   aspect-ratio: 1/1;
-  padding: 1rem;
+  /* padding: 1rem; */
   border-radius: 1rem;
   /* border: 1px solid var(--primary); */
   position: relative;
