--- a/src/style.css
+++ b/src/style.css
@@ -19,11 +19,12 @@ html {
   font-family: "Saira Condensed";
 }
 
-body {
+#bg {
   min-width: 100vw;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 1rem;
 }
